# ErrorNoWatcher

./: .gitignore  Cargo.toml  README.md  build.rs  default.nix  devenv.nix  errornowatcher.lua  flake.nix  main.lua
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: build.yaml  lint.yaml
lib/: automation.lua  enum.lua  events.lua  inventory.lua  lib.lua  movement.lua  utils.lua
lua/: enum.lua  utils.lua
src/: arguments.rs  bot.rs  build_info.rs  commands.rs  events.rs  http.rs  logging.rs  main.rs  matrix.rs  particle.rs
src/hacks/: anti_knockback.rs  mod.rs
src/lua/: block.rs  direction.rs  entity.rs  events.rs  fluid_state.rs  logging.rs  mod.rs  player.rs  system.rs  thread.rs  vec3.rs
src/lua/client/: container.rs  interaction.rs  mod.rs  movement.rs  state.rs  world.rs
src/lua/client/world/: find.rs  mod.rs  queries.rs
src/lua/container/: click.rs  item_stack.rs  mod.rs
src/lua/matrix/: client.rs  member.rs  mod.rs  room.rs
src/lua/nochatreports/: crypt.rs  key.rs  mod.rs
src/matrix/: bot.rs  mod.rs  verification.rs
src/replay/: mod.rs  plugin.rs  recorder.rs
src/scripting/: client.rs  entity.rs  hunger.rs  logging.rs  mod.rs  position.rs
src/scripting/client/: interaction.rs  mod.rs  movement.rs  pathfinding.rs  state.rs  world.rs
