[package]
name = "errornowatcher"
version = "0.2.0"
edition = "2024"
build = "build.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
strip = true

[build-dependencies]
built = { version = "0", features = ["git2"] }

[dependencies]
anyhow = "1"
azalea = { git = "https://github.com/azalea-rs/azalea.git" }
bevy_app = "0"
bevy_ecs = "0"
bevy_log = "0"
clap = { version = "4", features = ["derive", "string"] }
console-subscriber = { version = "0", optional = true }
futures = "0"
futures-locks = "0"
http-body-util = "0"
hyper = { version = "1", features = ["server"] }
hyper-util = "0"
log = { version = "0" }
mimalloc = { version = "0", optional = true }
mlua = { version = "0", features = ["async", "luajit", "send"] }
ncr = { version = "0", features = ["cfb8", "ecb", "gcm"] }
parking_lot = "0"
serde_json = "1"
smallvec = { version = "1", features = ["write"] }
tokio = { version = "1", features = ["macros"] }
zip = "2"

[features]
console-subscriber = ["dep:console-subscriber"]
mimalloc = ["dep:mimalloc"]
