[package]
name = "errornowatcher"
version = "0.2.0"
edition = "2024"
build = "build.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
strip = true

[build-dependencies]
built = { git = "https://github.com/lukaslueg/built", features = ["git2"] }

[dependencies]
anyhow = "1"
azalea = { git = "https://github.com/azalea-rs/azalea" }
azalea-hax = { git = "https://github.com/azalea-rs/azalea-hax" }
bevy_app = "0"
bevy_ecs = "0"
bevy_log = "0"
clap = { version = "4", features = ["derive", "string"] }
console-subscriber = { version = "0", optional = true }
ctrlc = { version = "3", features = ["termination"] }
dirs = { version = "6", optional = true }
futures = "0"
futures-locks = "0"
http-body-util = "0"
hyper = { version = "1", features = ["server"] }
hyper-util = "0"
log = { version = "0" }
matrix-sdk = { version = "0", optional = true }
mimalloc = { version = "0", optional = true }
mlua = { version = "0", features = ["async", "luajit", "send"] }
ncr = { version = "0", features = ["cfb8", "ecb", "gcm"] }
parking_lot = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
zip = { version = "2", default-features = false, features = ["flate2"] }

[features]
console-subscriber = ["dep:console-subscriber"]
default = ["matrix"]
matrix = ["dep:dirs", "dep:matrix-sdk"]
mimalloc = ["dep:mimalloc"]
